Added seperate files for Game session models
